Revision history for GLPI agent

1.2 not yet released

core:
* better error reporting on internal http client error

inventory:
* Use uts.name for Proxmox lxc containers
* Support customized AnyDesk client as remote management inventory on unix/linux
* Backport of @xo4yecTb patch: NoLog option for megacli util fusioninventory/fusioninventory-agent#996
* Fix teamviewer remote_mgmt inventory regression introduced in previous version

netdiscovery/netinventory:
* New feature: Support device storages with first use for Infortrend SAN inventory
  This feature requires GLPI 10 server-side and disks are integrated as components
* Fix: don't rescan config on each thread but share parent config to avoid threading
  crash on win32

deploy:
* fix: Fix UserInteraction messages encoding failure as perl 5.34 regression

collect:
* Make collect task more verbose when debug is enabled

ssl-server-plugin:
* Fix: Support closing forked SSL connections without shutdown SSL to support Proxy server plugin
* Bump version to 1.1

injector:
* Fix shortly named directory are skipped

contrib:
* Fix #73: Fix ADMX/ADML for agent configuration via GPO

1.1 Fri, 04 Feb 2022

core:
* Define DateTime perl library as a requirement
* Fix: Replace JSON requirement by Cpanel::JSON::XS as JSON is not thread-safe
* Fix wrong next run date update after a long computer shutdown
* Few optimizations
* Support standard empty XML reply as server response

netdiscovery/netinventory:
* Make tasks compatible with GLPI 10 if GlpiInventory plugin is also installed
 - if that case, server URL should be set with:
  * /plugins/glpiinventory if the plugin has been manually installed in /plugins
  * /marketplace/glpiinventory if the plugin has been installed via marketplace
* Fix: Fix expiration time support to avoid aborting on legit short run
* Updated sysobject.ids
* Bump NetDiscovery task version to 5.0
* Bump NetInventory task version to 5.0

inventory:
* Fix #44: Avoid double utf-8 encoding while sending JSON