@@ -1,0 +1,2 @@
+inventory_loc=resources/generic/databases/ora195
+inst_group=oinstall
